<resources>
    <string name="app_name">HealthYoda</string>
    <string name="fn">Full Name</string>
    <string name="pw">Password</string>
    <string name="mail">Email</string>
    <string name="loc">Location</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="details">Enter your details</string>
    <string name="register">Register</string>
    <string name="pn">Phone number</string>
</resources>
