<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".registerpage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/profilepic" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_margin="17dp"

        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="60dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/fn"
        android:inputType="textPersonName"
        android:textColorHint="@color/whitish"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignBottom="@+id/editText3"
        android:layout_marginBottom="65dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/pn"
        android:inputType="phone"
        android:textColorHint="@color/whitish"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="60dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/whitish"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_marginTop="350dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:textColorHint="@color/whitish" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_marginTop="410dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/loc"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/whitish"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="@color/colorAccent"
        android:textColor="@color/f1"
        android:textSize="20sp"

        android:text="@string/register" />

</RelativeLayout>
